<resources>
    <string name="app_name">MyProjectToDoApp</string>
    <string name="task_title">Task Title</string>
    <string name="enter_task_title">Enter Task Title</string>
    <string name="what_is_to_be_done">What is to be done?</string>
    <string name="tell_us_about_your_task">Tell Us About Your Task</string>
    <string name="save_task">SAVE TASK</string>
    <string name="set_time">Set Time</string>
    <string name="set_date">Set Date</string>
    <string name="set_reminder_date_and_time">Set reminder date and time</string>
</resources>